fix: checkbox alignment on markdown

--- a/src/pages/changelog/style.scss
+++ b/src/pages/changelog/style.scss
@@ -1,8 +1,7 @@
 #changelog {
-  height: 100%;
-  width: 100%;
-  padding: 8px;
-  overflow: auto;
+    max-width: 800px;
+    margin: auto;
+    overflow: auto;
 }
 
 .loading {
